# compiled-expressions

./: .gitignore  README.md  compiled-expressions.cabal  shell.nix
benchmark/: Main.hs
src/Data/: CompiledExpression.hs
src/Data/CompiledExpression/: Internal.hs
test/: Main.hs
