name:                compiled-expressions
version:             0.1.0.0
synopsis:            Compile a certain class of Haskell expressions to efficient machine code at run-time.
description:
    This library can compile some Haskell functions to LLVM which can then be
    used in Haskell in a way that is almost identical to the original form of
    the Haskell function.
    .
    The class of functions that can be compiled this way are those that take an
    (optionally) Traversable container containing Floating -typeclassed
    numbers. This library uses a observable sharing and a special numerical
    type to capture the structure of the computation and then generates a LLVM
    IR that implements the function.
    .
    The library is highly experimental. Very large computations can take a long
    time to compile. I've seen observable sharing fail on a seemingly simple
    computation. However, when it works, the performance boost can be
    astounding. In my simulations of Hopfield neural networks, the compiled
    expression executes around 30x. This package contains some cabal benchmarks.
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

library
  exposed-modules:     Data.CompiledExpression
                       Data.CompiledExpression.Internal
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base                 >=4.7     && <5.0
                      ,containers           >=0.5     && <1.0
                      ,hashable             >=1.2.3.2 && <2.0
                      ,lens                 >=4.6     && <5.0
                      ,primitive            >=0.5     && <1.0
                      ,transformers         >=0.4     && <1.0
                      ,unordered-containers >=0.2.5   && <1.0
                      ,llvm-general         >=3.4.5.3 && <4.0
                      ,llvm-general-pure    >=3.4.5.3 && <4.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                      ,compiled-expression
                      ,test-framework             >=0.8.1.1 && <1.0
                      ,test-framework-quickcheck2 >=0.3.0.3 && <1.0
                      ,QuickCheck                 >=2.8.1   && <3.0
  hs-source-dirs:      test
  default-language:    Haskell2010

